[package]
name = "sys-mount"
version = "2.1.1"
description = "High level FFI binding around the sys mount & umount2 calls"
repository = "https://github.com/pop-os/sys-mount"
authors = ["Michael Aaron Murphy <michael@mmurphy.dev>"]
license = "MIT OR Apache-2.0"
keywords = ["linux", "sys", "mount", "umount"]
categories = ["external-ffi-bindings", "filesystem", "os::unix-apis"]
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "2.4.1"
libc = "0.2.151"
loopdev = { package = "loopdev-erikh", version = "0.5.0", optional = true }
smart-default = "0.7.1"
thiserror = "1.0.56"
tracing = "0.1.40"

[dev-dependencies]
clap = "4.4.13"

[features]
default = ["loop"]
loop = ["loopdev"]
