[package]
name = "sys-mount"
version = "3.1.0"
description = "High level FFI binding around the sys mount & umount2 calls"
repository = "https://github.com/pop-os/sys-mount"
authors = ["Michael Aaron Murphy <michael@mmurphy.dev>"]
license = "MIT OR Apache-2.0"
keywords = ["linux", "sys", "mount", "umount"]
categories = ["external-ffi-bindings", "filesystem", "os::unix-apis"]
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
bitflags = "2.4.1"
libc = "0.2.139"
loopdev = { package = "loopdev-3", version = "0.5.0", optional = true }
smart-default = "0.7.1"
thiserror = "1.0.38"
tracing = "0.1.37"

[dev-dependencies]
clap = "4.1.4"

[features]
default = ["loop"]
loop = ["loopdev"]
